# Freesound-Audio-Tagging-2019

./: .gitignore  README.md  inference.ipynb  pyproject.toml  sound-classification-training.ipynb
notebooks/: data-preprocessing.ipynb  inference.ipynb
src/: dataset.py  engine.py  inference.py  models.py  preprocess.py  train.py
