[project]
name = "freesound-audio-tagging-2019"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "tqdm>=4.67.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "fastprogress>=1.0.3",
]
